// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SNAPSHOTS — full engine output for canonical cases > snapshot: Mandibular Class I bilateral DE 1`] = `
{
  "abutmentDesigns": [
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Stress-releasing clasp assembly of choice for distal extension",
      "claspTier": "strong",
      "claspType": "RPI",
      "contraindications": [],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mid-buccal",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establish path of insertion",
      "isPrimaryAbutment": true,
      "reciprocation": {
        "rationale": "Reciprocation provided by the major connector plating",
        "text": "Distal proximal plate + lingual plating",
        "type": "plate",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (deepening)",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "I-bar engaging 0.01" mid-buccal undercut",
      "spanType": "distal-extension",
      "surveyCrown": null,
      "tooth": 20,
    },
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Stress-releasing clasp assembly of choice for distal extension",
      "claspTier": "strong",
      "claspType": "RPI",
      "contraindications": [],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mid-buccal",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establish path of insertion",
      "isPrimaryAbutment": true,
      "reciprocation": {
        "rationale": "Reciprocation provided by the major connector plating",
        "text": "Distal proximal plate + lingual plating",
        "type": "plate",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (deepening)",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "I-bar engaging 0.01" mid-buccal undercut",
      "spanType": "distal-extension",
      "surveyCrown": null,
      "tooth": 29,
    },
  ],
  "axiumCode": "D5214",
  "baseDesigns": [
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": "Distal tissue stop required",
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention",
      "spanTeeth": [
        18,
        19,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": "Distal tissue stop required",
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention",
      "spanTeeth": [
        30,
        31,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
  ],
  "designIntent": "definitive",
  "framework": {
    "material": "Co-Cr",
    "rationale": "Standard favorable choice for RPD frameworks",
    "requiresApproval": false,
  },
  "indirectRetainers": [
    {
      "alternativeRationale": null,
      "rationale": "Indirect retainer placed perpendicular to the fulcrum line, as far from the axis of rotation as possible, to resist up-lifting of the distal extension base",
      "restType": "mesial occlusal rest",
      "tier": "strong",
      "tooth": 28,
    },
    {
      "alternativeRationale": null,
      "rationale": "Indirect retainer placed perpendicular to the fulcrum line, as far from the axis of rotation as possible, to resist up-lifting of the distal extension base",
      "restType": "mesial occlusal rest",
      "tier": "strong",
      "tooth": 21,
    },
  ],
  "kennedy": {
    "class": "I",
    "deSide": null,
    "description": "Kennedy Class I",
    "modSpans": [],
    "modifications": 0,
    "primarySpans": [
      {
        "afterBound": 20,
        "beforeBound": null,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          18,
          19,
        ],
        "type": "distal-extension",
      },
      {
        "afterBound": null,
        "beforeBound": 29,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": true,
        "teeth": [
          30,
          31,
        ],
        "type": "distal-extension",
      },
    ],
    "spans": [
      {
        "afterBound": 20,
        "beforeBound": null,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          18,
          19,
        ],
        "type": "distal-extension",
      },
      {
        "afterBound": null,
        "beforeBound": 29,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": true,
        "teeth": [
          30,
          31,
        ],
        "type": "distal-extension",
      },
    ],
  },
  "labScript": "Please fabricate Co-Cr metal framework for mandibular RPD.

Major connector: Lingual Bar.

* Exact undercuts to engage are marked in red. *

#20: Distal proximal plate, Mesial rest, I-bar engaging 0.01" mid-buccal undercut.
#21: Mesial rest.
#28: Mesial rest.
#29: Distal proximal plate, Mesial rest, I-bar engaging 0.01" mid-buccal undercut.

#18-19: Open lattice with distal tissue stop.
#30-31: Open lattice with distal tissue stop.

Please return for try-in. Thank you.",
  "majorConnector": {
    "alternative": "Lingual Plate",
    "alternativeRationale": "Lingual Plate is indicated if the patient has mandibular tori or if lingual sulcus depth is <8mm. Selected Lingual Bar here because sulcus is adequate and no tori.",
    "rationale": "Major connector of choice when sufficient space exists (≥8mm sulcus)",
    "tier": "common",
    "type": "Lingual Bar",
    "width": "4mm + 4mm clearance from gingival margin",
  },
  "pdi": {
    "breakdown": {
      "abutmentCondition": {
        "class": "I",
        "rationale": "All bounding abutments have good periodontal prognosis — no preprosthetic therapy required on abutments.",
      },
      "location": {
        "class": "III",
        "rationale": "Kennedy Class I (distal extension) — substantially compromised; requires tooth-tissue support.",
      },
      "occlusion": {
        "class": "I",
        "rationale": "Angle Class I occlusion assumed; no VDO change anticipated.",
      },
      "residualRidge": {
        "class": "I",
        "rationale": "Mild ridge resorption — adequate residual ridge support.",
      },
    },
    "careRecommendation": "PDI Class III — substantially complex; consider postgraduate prosthodontic input.",
    "class": "III",
    "classNum": 3,
    "drivers": [
      "location",
    ],
  },
  "redFlags": [
    {
      "message": "Altered Cast Technique required: two-stage functional impression to capture compressible soft tissues and prevent framework rotation.",
      "severity": "info",
      "type": "altered-cast",
    },
  ],
}
`;

exports[`SNAPSHOTS — full engine output for canonical cases > snapshot: Mandibular Class II Mod 1 (Design Case I lower) 1`] = `
{
  "abutmentDesigns": [
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Stress-releasing clasp assembly when RPI is contraindicated (soft tissue undercut >1mm at 4–5mm below the buccal gingival margin)",
      "claspTier": "strong",
      "claspType": "Combination",
      "contraindications": [
        {
          "key": "soft-tissue-undercut",
          "text": "soft tissue undercut >1mm at 4–5mm below the buccal gingival margin",
        },
      ],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mid-buccal",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establish path of insertion",
      "isPrimaryAbutment": true,
      "reciprocation": {
        "rationale": "Cast lingual reciprocal arm opposing the retentive arm",
        "text": "Cast lingual reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (deepening)",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "18ga wrought wire retentive arm engaging 0.02" MB undercut",
      "spanType": "distal-extension",
      "surveyCrown": null,
      "tooth": 21,
    },
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Clasp of choice for tooth-supported area",
      "claspTier": "strong",
      "claspType": "Akers",
      "contraindications": [],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mesio-buccal",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establish path of insertion",
      "isPrimaryAbutment": false,
      "reciprocation": {
        "rationale": "Cast lingual reciprocal arm opposing the retentive arm",
        "text": "Cast lingual reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (deepening)",
        "surface": "distal",
        "type": "occlusal",
      },
      "retentiveArm": "Cast circumferential retentive arm engaging 0.01" mesio-buccal undercut",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 29,
    },
    {
      "claspAlternative": null,
      "claspAlternativeRationale": "Some clinical nomenclature in some lectures labels this clasp simply as "Akers" with notation that the retentive arm engages the DL/DB undercut (rather than calling it "Reverse Akers" explicitly). Same physical design.",
      "claspAlternatives": null,
      "claspRationale": "Used when only a distal undercut is available (Reverse Akers pattern: retentive arm engages disto-lingual undercut)",
      "claspTier": "common",
      "claspType": "Reverse Akers",
      "contraindications": [
        {
          "key": "undercut-location",
          "text": "usable undercut not at mid-buccal/mesio-buccal (disto-lingual)",
        },
      ],
      "crownLengthening": null,
      "effectiveUndercutLocation": "disto-lingual",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "mesial",
      },
      "guidePlaneRationale": "Establish path of insertion",
      "isPrimaryAbutment": false,
      "reciprocation": {
        "rationale": "Cast lingual reciprocal arm opposing the retentive arm",
        "text": "Cast buccal reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#8 round (outline) / #6 round (deepening)",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "Cast retentive arm engaging 0.01" disto-lingual undercut",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 31,
    },
  ],
  "axiumCode": "D5214",
  "baseDesigns": [
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": "Distal tissue stop required",
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention",
      "spanTeeth": [
        18,
        19,
        20,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": undefined,
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention",
      "spanTeeth": [
        30,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
  ],
  "designIntent": "definitive",
  "framework": {
    "material": "Co-Cr",
    "rationale": "Standard favorable choice for RPD frameworks",
    "requiresApproval": false,
  },
  "indirectRetainers": [
    {
      "alternativeRationale": "Engine places indirect retainer on the opposite side from the distal extension. The textbook clinical rule is geometric — perpendicular to the fulcrum line at its midpoint, on the side opposite the saddle. For most Class II cases these give the same answer, but in some configurations (Class II Mod 1 with diagonal fulcrum line) in practice the indirect is sometimes placed on the SAME side as the DE but at a perpendicular position to the fulcrum. In practice, instructors may also reuse an existing rest-only abutment (max anterior with ball/cingulum rest) as the dual-role indirect retainer rather than adding a separate one.",
      "rationale": "Indirect retainer placed perpendicular to the fulcrum line, as far from the axis of rotation as possible, to resist up-lifting of the distal extension base",
      "restType": "mesial occlusal rest",
      "tier": "common",
      "tooth": 28,
    },
  ],
  "kennedy": {
    "class": "II",
    "deSide": "left",
    "description": "Kennedy Class II Modification 1",
    "modSpans": [
      {
        "afterBound": 31,
        "beforeBound": 29,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          30,
        ],
        "type": "tooth-supported",
      },
    ],
    "modifications": 1,
    "primarySpans": [
      {
        "afterBound": 21,
        "beforeBound": null,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          18,
          19,
          20,
        ],
        "type": "distal-extension",
      },
    ],
    "spans": [
      {
        "afterBound": 21,
        "beforeBound": null,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          18,
          19,
          20,
        ],
        "type": "distal-extension",
      },
      {
        "afterBound": 31,
        "beforeBound": 29,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          30,
        ],
        "type": "tooth-supported",
      },
    ],
  },
  "labScript": "Please fabricate Co-Cr metal framework for mandibular RPD.

Major connector: Lingual Bar.

* Exact undercuts to engage are marked in red. *

#21: Distal proximal plate, Mesial rest, Combination clasp engaging 0.02" MB undercut, Lingual reciprocal plate.
#28: Mesial rest.
#29: Distal proximal plate, Distal rest, Akers clasp engaging 0.01" mesio-buccal undercut, Lingual reciprocal clasp.
#31: Mesial proximal plate, Mesial rest, Akers clasp engaging 0.01" DL undercut, Buccal reciprocal clasp.

#18-20: Open lattice with distal tissue stop.
#30: Open lattice.

Please return for try-in. Thank you.",
  "majorConnector": {
    "alternative": "Lingual Plate",
    "alternativeRationale": "Lingual Plate is indicated if the patient has mandibular tori or if lingual sulcus depth is <8mm. Selected Lingual Bar here because sulcus is adequate and no tori.",
    "rationale": "Major connector of choice when sufficient space exists (≥8mm sulcus)",
    "tier": "common",
    "type": "Lingual Bar",
    "width": "4mm + 4mm clearance from gingival margin",
  },
  "pdi": {
    "breakdown": {
      "abutmentCondition": {
        "class": "I",
        "rationale": "All bounding abutments have good periodontal prognosis — no preprosthetic therapy required on abutments.",
      },
      "location": {
        "class": "III",
        "rationale": "Kennedy Class II (distal extension) — substantially compromised; requires tooth-tissue support.",
      },
      "occlusion": {
        "class": "I",
        "rationale": "Angle Class I occlusion assumed; no VDO change anticipated.",
      },
      "residualRidge": {
        "class": "I",
        "rationale": "Mild ridge resorption — adequate residual ridge support.",
      },
    },
    "careRecommendation": "PDI Class III — substantially complex; consider postgraduate prosthodontic input.",
    "class": "III",
    "classNum": 3,
    "drivers": [
      "location",
    ],
  },
  "redFlags": [
    {
      "message": "Altered Cast Technique required: two-stage functional impression to capture compressible soft tissues and prevent framework rotation.",
      "severity": "info",
      "type": "altered-cast",
    },
  ],
}
`;

exports[`SNAPSHOTS — full engine output for canonical cases > snapshot: Mandibular Class III single tooth (#19) 1`] = `
{
  "abutmentDesigns": [
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Clasp of choice for tooth-supported area",
      "claspTier": "strong",
      "claspType": "Akers",
      "contraindications": [],
      "crownLengthening": null,
      "effectiveUndercutLocation": "disto-buccal",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "mesial",
      },
      "guidePlaneRationale": "Establish path of insertion",
      "isPrimaryAbutment": false,
      "reciprocation": {
        "rationale": "Cast lingual reciprocal arm opposing the retentive arm",
        "text": "Cast lingual reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#8 round (outline) / #6 round (deepening)",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "Cast circumferential retentive arm engaging 0.01" disto-buccal undercut",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 18,
    },
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Clasp of choice for tooth-supported area",
      "claspTier": "strong",
      "claspType": "Akers",
      "contraindications": [],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mesio-buccal",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establish path of insertion",
      "isPrimaryAbutment": false,
      "reciprocation": {
        "rationale": "Cast lingual reciprocal arm opposing the retentive arm",
        "text": "Cast lingual reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (deepening)",
        "surface": "distal",
        "type": "occlusal",
      },
      "retentiveArm": "Cast circumferential retentive arm engaging 0.01" mesio-buccal undercut",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 20,
    },
  ],
  "axiumCode": "D5214",
  "baseDesigns": [
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": undefined,
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention",
      "spanTeeth": [
        19,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
  ],
  "designIntent": "definitive",
  "framework": {
    "material": "Co-Cr",
    "rationale": "Standard favorable choice for RPD frameworks",
    "requiresApproval": false,
  },
  "indirectRetainers": [],
  "kennedy": {
    "class": "III",
    "deSide": null,
    "description": "Kennedy Class III",
    "modSpans": [],
    "modifications": 0,
    "primarySpans": [
      {
        "afterBound": 20,
        "beforeBound": 18,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          19,
        ],
        "type": "tooth-supported",
      },
    ],
    "spans": [
      {
        "afterBound": 20,
        "beforeBound": 18,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          19,
        ],
        "type": "tooth-supported",
      },
    ],
  },
  "labScript": "Please fabricate Co-Cr metal framework for mandibular RPD.

Major connector: Lingual Bar.

* Exact undercuts to engage are marked in red. *

#18: Mesial proximal plate, Mesial rest, Akers clasp engaging 0.01" disto-buccal undercut, Lingual reciprocal clasp.
#20: Distal proximal plate, Distal rest, Akers clasp engaging 0.01" mesio-buccal undercut, Lingual reciprocal clasp.

#19: Open lattice.

Please return for try-in. Thank you.",
  "majorConnector": {
    "alternative": "Lingual Plate",
    "alternativeRationale": "Lingual Plate is indicated if the patient has mandibular tori or if lingual sulcus depth is <8mm. Selected Lingual Bar here because sulcus is adequate and no tori.",
    "rationale": "Major connector of choice when sufficient space exists (≥8mm sulcus)",
    "tier": "common",
    "type": "Lingual Bar",
    "width": "4mm + 4mm clearance from gingival margin",
  },
  "pdi": {
    "breakdown": {
      "abutmentCondition": {
        "class": "I",
        "rationale": "All bounding abutments have good periodontal prognosis — no preprosthetic therapy required on abutments.",
      },
      "location": {
        "class": "I",
        "rationale": "Kennedy Class III, ≤3 teeth missing — tooth-supported in single sextant.",
      },
      "occlusion": {
        "class": "I",
        "rationale": "Angle Class I occlusion assumed; no VDO change anticipated.",
      },
      "residualRidge": {
        "class": "I",
        "rationale": "Mild ridge resorption — adequate residual ridge support.",
      },
    },
    "careRecommendation": "PDI Class I — appropriate for predoctoral / general dentistry care.",
    "class": "I",
    "classNum": 1,
    "drivers": [
      "location",
      "abutment condition",
      "occlusion",
      "residual ridge",
    ],
  },
  "redFlags": [],
}
`;

exports[`SNAPSHOTS — full engine output for canonical cases > snapshot: Maxillary Class II Mod 3 (Design Case I) 1`] = `
{
  "abutmentDesigns": [
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Clasp of choice for tooth-supported area",
      "claspTier": "strong",
      "claspType": "Akers",
      "contraindications": [
        {
          "key": "vestibular",
          "text": "vestibular depth ≤5mm",
        },
      ],
      "crownLengthening": null,
      "effectiveUndercutLocation": "disto-buccal",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "mesial",
      },
      "guidePlaneRationale": "Establish path of insertion",
      "isPrimaryAbutment": false,
      "reciprocation": {
        "rationale": "Cast lingual reciprocal arm opposing the retentive arm",
        "text": "Cast lingual reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#8 round (outline) / #6 round (deepening)",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "Cast circumferential retentive arm engaging 0.01" disto-buccal undercut",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 2,
    },
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Clasp of choice for tooth-supported area",
      "claspTier": "strong",
      "claspType": "Akers",
      "contraindications": [
        {
          "key": "vestibular",
          "text": "vestibular depth ≤5mm",
        },
      ],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mesio-buccal",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establish path of insertion",
      "isPrimaryAbutment": false,
      "reciprocation": {
        "rationale": "Cast lingual reciprocal arm opposing the retentive arm",
        "text": "Cast lingual reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (deepening)",
        "surface": "distal",
        "type": "occlusal",
      },
      "retentiveArm": "Cast circumferential retentive arm engaging 0.01" mesio-buccal undercut",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 4,
    },
    {
      "claspAlternative": "I-bar (esthetic)",
      "claspAlternativeRationale": "Worked clinical cases sometimes use I-bar esthetic on a max-anterior abutment that's terminal to a posterior tooth-bounded gap (LabRx Case A example: #6 terminal to #4-5 gap → I-bar esthetic). Consider I-bar esthetic if the case has only 2-3 retentive clasps and additional anterior retention is needed.",
      "claspRationale": "For esthetic reasons, no clasp designed on maxillary anterior; long/parallel guide plane provides secondary retention",
      "claspTier": "judgment",
      "claspType": "Rest Only (no clasp)",
      "contraindications": [],
      "crownLengthening": null,
      "guidePlane": {
        "length": "long/parallel (full clinical crown height)",
        "surface": "distal",
      },
      "guidePlaneRationale": "Provide secondary retention",
      "isPrimaryAbutment": false,
      "reciprocation": null,
      "restRationale": "Additional rest to distribute occlusal forces away from compromised abutment",
      "restSeat": {
        "bur": "inverted cone",
        "surface": "distal",
        "type": "cingulum",
      },
      "retentiveArm": "None — major connector contact provides bracing",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 6,
    },
    {
      "claspAlternative": "I-bar (esthetic)",
      "claspAlternativeRationale": "Worked clinical cases sometimes use I-bar esthetic on a max-anterior abutment that's terminal to a posterior tooth-bounded gap (LabRx Case A example: #6 terminal to #4-5 gap → I-bar esthetic). Consider I-bar esthetic if the case has only 2-3 retentive clasps and additional anterior retention is needed.",
      "claspRationale": "For esthetic reasons, no clasp designed on maxillary anterior; long/parallel guide plane provides secondary retention",
      "claspTier": "judgment",
      "claspType": "Rest Only (no clasp)",
      "contraindications": [],
      "crownLengthening": null,
      "guidePlane": {
        "length": "long/parallel (full clinical crown height)",
        "surface": "mesial",
      },
      "guidePlaneRationale": "Provide secondary retention",
      "isPrimaryAbutment": false,
      "reciprocation": null,
      "restRationale": "Additional rest to distribute occlusal forces away from compromised abutment",
      "restSeat": {
        "bur": "inverted cone",
        "surface": "mesial",
        "type": "ball",
      },
      "retentiveArm": "None — major connector contact provides bracing",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 9,
    },
    {
      "claspAlternative": "I-bar (esthetic)",
      "claspAlternativeRationale": "Worked clinical cases sometimes use I-bar esthetic on a max-anterior abutment that's terminal to a posterior tooth-bounded gap (LabRx Case A example: #6 terminal to #4-5 gap → I-bar esthetic). Consider I-bar esthetic if the case has only 2-3 retentive clasps and additional anterior retention is needed.",
      "claspRationale": "For esthetic reasons, no clasp designed on maxillary anterior; long/parallel guide plane provides secondary retention",
      "claspTier": "judgment",
      "claspType": "Rest Only (no clasp)",
      "contraindications": [],
      "crownLengthening": null,
      "guidePlane": {
        "length": "long/parallel (full clinical crown height)",
        "surface": "mesial",
      },
      "guidePlaneRationale": "Provide secondary retention",
      "isPrimaryAbutment": false,
      "reciprocation": null,
      "restRationale": "Additional rest to distribute occlusal forces away from compromised abutment",
      "restSeat": {
        "bur": "inverted cone",
        "surface": "mesial",
        "type": "cingulum",
      },
      "retentiveArm": "None — major connector contact provides bracing",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 11,
    },
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Stress-releasing clasp assembly when RPI is contraindicated (vestibular depth ≤5mm)",
      "claspTier": "strong",
      "claspType": "Combination",
      "contraindications": [
        {
          "key": "vestibular",
          "text": "vestibular depth ≤5mm",
        },
        {
          "key": "frenum",
          "text": "high frenum in I-bar approach path",
        },
      ],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mid-buccal",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establish path of insertion",
      "isPrimaryAbutment": true,
      "reciprocation": {
        "rationale": "Cast lingual reciprocal arm opposing the retentive arm",
        "text": "Cast lingual reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (deepening)",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "18ga wrought wire retentive arm engaging 0.02" MB undercut",
      "spanType": "distal-extension",
      "surveyCrown": null,
      "tooth": 12,
    },
  ],
  "axiumCode": "D5213",
  "baseDesigns": [
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": undefined,
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention",
      "spanTeeth": [
        3,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": undefined,
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention",
      "spanTeeth": [
        5,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": undefined,
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention",
      "spanTeeth": [
        7,
        8,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": undefined,
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention",
      "spanTeeth": [
        10,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": "Distal tissue stop required",
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention",
      "spanTeeth": [
        13,
        14,
        15,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
  ],
  "designIntent": "definitive",
  "framework": {
    "material": "Co-Cr",
    "rationale": "Standard favorable choice for RPD frameworks",
    "requiresApproval": false,
  },
  "indirectRetainers": [
    {
      "alternativeRationale": "Engine places indirect retainer on the opposite side from the distal extension. The textbook clinical rule is geometric — perpendicular to the fulcrum line at its midpoint, on the side opposite the saddle. For most Class II cases these give the same answer, but in some configurations (Class II Mod 1 with diagonal fulcrum line) in practice the indirect is sometimes placed on the SAME side as the DE but at a perpendicular position to the fulcrum. In practice, instructors may also reuse an existing rest-only abutment (max anterior with ball/cingulum rest) as the dual-role indirect retainer rather than adding a separate one.",
      "rationale": "Indirect retainer placed perpendicular to the fulcrum line, as far from the axis of rotation as possible, to resist up-lifting of the distal extension base",
      "restType": "mesial cingulum rest",
      "tier": "common",
      "tooth": 6,
    },
  ],
  "kennedy": {
    "class": "II",
    "deSide": "left",
    "description": "Kennedy Class II Modification 4",
    "modSpans": [
      {
        "afterBound": 4,
        "beforeBound": 2,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          3,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 6,
        "beforeBound": 4,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          5,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 9,
        "beforeBound": 6,
        "containsAnterior": true,
        "containsPosterior": false,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          7,
          8,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 11,
        "beforeBound": 9,
        "containsAnterior": true,
        "containsPosterior": false,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          10,
        ],
        "type": "tooth-supported",
      },
    ],
    "modifications": 4,
    "primarySpans": [
      {
        "afterBound": null,
        "beforeBound": 12,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          13,
          14,
          15,
        ],
        "type": "distal-extension",
      },
    ],
    "spans": [
      {
        "afterBound": 4,
        "beforeBound": 2,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          3,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 6,
        "beforeBound": 4,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          5,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 9,
        "beforeBound": 6,
        "containsAnterior": true,
        "containsPosterior": false,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          7,
          8,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 11,
        "beforeBound": 9,
        "containsAnterior": true,
        "containsPosterior": false,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          10,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": null,
        "beforeBound": 12,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          13,
          14,
          15,
        ],
        "type": "distal-extension",
      },
    ],
  },
  "labScript": "Please fabricate Co-Cr metal framework for maxillary RPD.

Major connector: A-P Strap with 0.5mm beading on the tissue side.

* Exact undercuts to engage are marked in red. *

#2: Mesial proximal plate, Mesial rest, Akers clasp engaging 0.01" disto-buccal undercut, Palatal reciprocal clasp.
#4: Distal proximal plate, Distal rest, Akers clasp engaging 0.01" mesio-buccal undercut, Palatal reciprocal clasp.
#6: Distal proximal plate, Cingulum rest.
#9: Mesial proximal plate, Mesial ball rest.
#11: Mesial proximal plate, Cingulum rest.
#12: Distal proximal plate, Mesial rest, Combination clasp engaging 0.02" MB undercut, Palatal reciprocal plate.

#3: Open lattice.
#5: Open lattice.
#7-8: Open lattice.
#10: Open lattice.
#13-15: Open lattice with distal tissue stop.

Please return for try-in. Thank you.",
  "majorConnector": {
    "note": "0.5mm beading on tissue side",
    "rationale": "Rigid major connector of choice for Maxillary Kennedy Class II",
    "tier": "strong",
    "type": "A-P Strap",
    "width": "8mm each strap, 6mm gingival clearance",
  },
  "pdi": {
    "breakdown": {
      "abutmentCondition": {
        "class": "I",
        "rationale": "All bounding abutments have good periodontal prognosis — no preprosthetic therapy required on abutments.",
      },
      "location": {
        "class": "III",
        "rationale": "Kennedy Class II (distal extension) — substantially compromised; requires tooth-tissue support.",
      },
      "occlusion": {
        "class": "I",
        "rationale": "Angle Class I occlusion assumed; no VDO change anticipated.",
      },
      "residualRidge": {
        "class": "I",
        "rationale": "Mild ridge resorption — adequate residual ridge support.",
      },
    },
    "careRecommendation": "PDI Class III — substantially complex; consider postgraduate prosthodontic input.",
    "class": "III",
    "classNum": 3,
    "drivers": [
      "location",
    ],
  },
  "redFlags": [
    {
      "message": "Altered Cast Technique required: two-stage functional impression to capture compressible soft tissues and prevent framework rotation.",
      "severity": "info",
      "type": "altered-cast",
    },
    {
      "message": "Vestibular depth ≤5mm: I-bar approach is contraindicated arch-wide. RPI assemblies have been switched to Combination Clasp.",
      "severity": "info",
      "type": "vestibular-depth",
    },
  ],
}
`;

exports[`SNAPSHOTS — full engine output for canonical cases > snapshot: Maxillary few teeth (Full Palate case) 1`] = `
{
  "abutmentDesigns": [
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Stress-releasing clasp assembly of choice for distal extension",
      "claspTier": "strong",
      "claspType": "RPI",
      "contraindications": [],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mid-buccal",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establish path of insertion",
      "isPrimaryAbutment": true,
      "reciprocation": {
        "rationale": "Reciprocation provided by the major connector plating",
        "text": "Distal proximal plate + lingual plating",
        "type": "plate",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (deepening)",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "I-bar engaging 0.01" mid-buccal undercut",
      "spanType": "distal-extension",
      "surveyCrown": null,
      "tooth": 4,
    },
    {
      "claspAlternative": "I-bar (esthetic)",
      "claspAlternativeRationale": "Worked clinical cases sometimes use I-bar esthetic on a max-anterior abutment that's terminal to a posterior tooth-bounded gap (LabRx Case A example: #6 terminal to #4-5 gap → I-bar esthetic). Consider I-bar esthetic if the case has only 2-3 retentive clasps and additional anterior retention is needed.",
      "claspRationale": "For esthetic reasons, no clasp designed on maxillary anterior; long/parallel guide plane provides secondary retention",
      "claspTier": "judgment",
      "claspType": "Rest Only (no clasp)",
      "contraindications": [],
      "crownLengthening": null,
      "guidePlane": {
        "length": "long/parallel (full clinical crown height)",
        "surface": "distal",
      },
      "guidePlaneRationale": "Provide secondary retention",
      "isPrimaryAbutment": false,
      "reciprocation": null,
      "restRationale": "Additional rest to distribute occlusal forces away from compromised abutment",
      "restSeat": {
        "bur": "inverted cone",
        "surface": "distal",
        "type": "cingulum",
      },
      "retentiveArm": "None — major connector contact provides bracing",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 6,
    },
    {
      "claspAlternative": "I-bar (esthetic)",
      "claspAlternativeRationale": "Worked clinical cases sometimes use I-bar esthetic on a max-anterior abutment that's terminal to a posterior tooth-bounded gap (LabRx Case A example: #6 terminal to #4-5 gap → I-bar esthetic). Consider I-bar esthetic if the case has only 2-3 retentive clasps and additional anterior retention is needed.",
      "claspRationale": "For esthetic reasons, no clasp designed on maxillary anterior; long/parallel guide plane provides secondary retention",
      "claspTier": "judgment",
      "claspType": "Rest Only (no clasp)",
      "contraindications": [],
      "crownLengthening": null,
      "guidePlane": {
        "length": "long/parallel (full clinical crown height)",
        "surface": "mesial",
      },
      "guidePlaneRationale": "Provide secondary retention",
      "isPrimaryAbutment": false,
      "reciprocation": null,
      "restRationale": "Additional rest to distribute occlusal forces away from compromised abutment",
      "restSeat": {
        "bur": "inverted cone",
        "surface": "mesial",
        "type": "cingulum",
      },
      "retentiveArm": "None — major connector contact provides bracing",
      "spanType": "anterior",
      "surveyCrown": null,
      "tooth": 11,
    },
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Stress-releasing clasp assembly of choice for distal extension",
      "claspTier": "strong",
      "claspType": "RPI",
      "contraindications": [],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mid-buccal",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establish path of insertion",
      "isPrimaryAbutment": true,
      "reciprocation": {
        "rationale": "Reciprocation provided by the major connector plating",
        "text": "Distal proximal plate + lingual plating",
        "type": "plate",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (deepening)",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "I-bar engaging 0.01" mid-buccal undercut",
      "spanType": "distal-extension",
      "surveyCrown": null,
      "tooth": 12,
    },
  ],
  "axiumCode": "D5213",
  "baseDesigns": [
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": "Distal tissue stop required",
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention",
      "spanTeeth": [
        2,
        3,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": undefined,
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention",
      "spanTeeth": [
        5,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
    {
      "alternative": "Open Lattice",
      "alternativeRationale": "Mesh is the preferred choice for anterior spans ≥3 teeth (esthetic-bulk preference reduces acrylic bulk in the visible zone). Open Lattice is also acceptable and provides slightly more acrylic retention.",
      "note": undefined,
      "rationale": "Used where there is limited inter-occlusal space",
      "spanTeeth": [
        7,
        8,
        9,
        10,
      ],
      "tier": "common",
      "type": "Mesh",
    },
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": "Distal tissue stop required",
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention",
      "spanTeeth": [
        13,
        14,
        15,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
  ],
  "designIntent": "definitive",
  "framework": {
    "material": "Co-Cr",
    "rationale": "Standard favorable choice for RPD frameworks",
    "requiresApproval": false,
  },
  "indirectRetainers": [
    {
      "alternativeRationale": null,
      "rationale": "Indirect retainer placed perpendicular to the fulcrum line, as far from the axis of rotation as possible, to resist up-lifting of the distal extension base",
      "restType": "mesial cingulum rest",
      "tier": "strong",
      "tooth": 6,
    },
    {
      "alternativeRationale": null,
      "rationale": "Indirect retainer placed perpendicular to the fulcrum line, as far from the axis of rotation as possible, to resist up-lifting of the distal extension base",
      "restType": "mesial cingulum rest",
      "tier": "strong",
      "tooth": 11,
    },
  ],
  "kennedy": {
    "class": "I",
    "deSide": null,
    "description": "Kennedy Class I Modification 2",
    "modSpans": [
      {
        "afterBound": 6,
        "beforeBound": 4,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          5,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 11,
        "beforeBound": 6,
        "containsAnterior": true,
        "containsPosterior": false,
        "crossesMidline": true,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          7,
          8,
          9,
          10,
        ],
        "type": "anterior",
      },
    ],
    "modifications": 2,
    "primarySpans": [
      {
        "afterBound": 4,
        "beforeBound": null,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": true,
        "teeth": [
          2,
          3,
        ],
        "type": "distal-extension",
      },
      {
        "afterBound": null,
        "beforeBound": 12,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          13,
          14,
          15,
        ],
        "type": "distal-extension",
      },
    ],
    "spans": [
      {
        "afterBound": 4,
        "beforeBound": null,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": true,
        "teeth": [
          2,
          3,
        ],
        "type": "distal-extension",
      },
      {
        "afterBound": 6,
        "beforeBound": 4,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          5,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 11,
        "beforeBound": 6,
        "containsAnterior": true,
        "containsPosterior": false,
        "crossesMidline": true,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          7,
          8,
          9,
          10,
        ],
        "type": "anterior",
      },
      {
        "afterBound": null,
        "beforeBound": 12,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          13,
          14,
          15,
        ],
        "type": "distal-extension",
      },
    ],
  },
  "labScript": "Please fabricate Co-Cr metal framework for maxillary RPD.

Major connector: Full Palatal Plate with 0.5mm beading on the tissue side.

* Exact undercuts to engage are marked in red. *

#4: Distal proximal plate, Mesial rest, I-bar engaging 0.01" mid-buccal undercut.
#6: Distal proximal plate, Cingulum rest.
#11: Mesial proximal plate, Cingulum rest.
#12: Distal proximal plate, Mesial rest, I-bar engaging 0.01" mid-buccal undercut.

#2-3: Open lattice with distal tissue stop.
#5: Open lattice.
#7-10: Mesh.
#13-15: Open lattice with distal tissue stop.

Please return for try-in. Thank you.",
  "majorConnector": {
    "alternative": "A-P Strap",
    "alternativeRationale": "The cutoff between A-P Strap and Full Palatal Plate ("few teeth remain") is qualitative in the curriculum. Engine uses ≤4 abutments OR severe resorption as the threshold based on Design Case II (4 abutments → Full Palate) vs Design Case I (6 abutments → A-P Strap). Some instructors may prefer A-P Strap with 4 abutments if the tooth distribution is favorable.",
    "note": "0.5mm beading on tissue side",
    "rationale": "Connector of choice when few teeth remain; increases retention and stability; rigid",
    "tier": "judgment",
    "type": "Full Palatal Plate",
  },
  "pdi": {
    "breakdown": {
      "abutmentCondition": {
        "class": "I",
        "rationale": "All bounding abutments have good periodontal prognosis — no preprosthetic therapy required on abutments.",
      },
      "location": {
        "class": "III",
        "rationale": "Kennedy Class I (distal extension) — substantially compromised; requires tooth-tissue support.",
      },
      "occlusion": {
        "class": "I",
        "rationale": "Angle Class I occlusion assumed; no VDO change anticipated.",
      },
      "residualRidge": {
        "class": "I",
        "rationale": "Mild ridge resorption — adequate residual ridge support.",
      },
    },
    "careRecommendation": "PDI Class III — substantially complex; consider postgraduate prosthodontic input.",
    "class": "III",
    "classNum": 3,
    "drivers": [
      "location",
    ],
  },
  "redFlags": [
    {
      "message": "Altered Cast Technique required: two-stage functional impression to capture compressible soft tissues and prevent framework rotation.",
      "severity": "info",
      "type": "altered-cast",
    },
  ],
}
`;
